Fix 27 CodeRabbit review findings: security, test quality, CI
Security:
- Sanitize correlation ID header to prevent CRLF injection (CorrelationIdFilter)

Test logic fixes:
- Fix assertThrows placement in PostgresChatMemoryStoreTest (was inside mock callback)
- Add guard assertion in FieldCollectorTest to prevent silent pass
- Check CountDownLatch.await() return value in ZaiConfigTest (2 places)
- Remove misleading verifyNoInteractions in SemanticCacheServiceTest
- Replace Thread.sleep with CountDownLatch in ExtractionOrchestratorTest
- Add missing assertions in DameeServiceToolTest and ExtractionOrchestratorTest
- Fix overlap verification no-op in SemanticChunkerTest
- Improve shutdown verification in AttachmentParserTest

Test naming fixes:
- Rename misleading test names (ChatControllerTest, IncidentUpdateRequestTest,
  WorkLogExtractorTest, SemanticCacheServiceTest, CreationResultTest)
- Fix "1 services" grammar bug in DameeServiceTool production code
- Fix typo in VectorStoreServiceTest method name

CI/Build fixes:
- Use 'mvn test' instead of 'surefire:test' to include test compilation
- Scope failOnError=false to remedy-connector only (not global)
- Update surefire 3.2.3->3.5.2, JaCoCo 0.8.11->0.8.12

Other:
- Remove 3 dead QualifierBuilder tests that never called any methods
- Add @Disabled to AgenticReasoningDemoTest (demo-only, no assertions)
- Use fixed timestamps in IncidentChunkStrategyTest to avoid timezone flakiness
- Document ToolIntentDetector regex group(7) vs group(8) bug

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>